<resources>
    <string name="app_name">MKESocial</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile">Profile</string>
    <string name="profile_pic">profile_pic</string>
    <string name="first_name">FirstName</string>
    <string name="about_me">About Me</string>
    <string name="bio">I am a happy panda who stares at a bubble all day long! My daily life consist of: Eat, Sleep, Repeat. Simple and Plain.</string>
    <string name="contact_information">Contact Information</string>
    <string name="email_addr">imacutepanda@gmail.com</string>
    <string name="events_i_am_attending">Events I am Attending</string>
    <string name="other_info">=== Other Information ===</string>
    <string name="middle_initial">Middle Initial</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="home_address">Home Address</string>
    <string name="save">Save</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="create_event_label">Create Event</string>
    <string name="edit_settings_label">Edit App Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="MKE_social_email_address">MKESocialApp@gmail.com</string>
    <string name="default_email_subject">Subj:To MKE Social App:</string>
    <string name="about_page_header">"About the MKE Social App</string>
    <string name="about_page_text">
        "This App was made by our group of four to fulfill a senior capstone requirement."
        "But, we put some work into it, and we hope you enjoy using it.\n\n"

        "If you have any feedback let us know by clicking the email icon."
    </string>
    <string name="search_hint">Search Events</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="facebook_app_id">135415283808776</string>
    <string name="fb_login_protocol_scheme">fb135415283808776</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_feed">MKESocial</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="date_format">MM/dd/yy</string>
    <string name="time_format">h:mm a</string>

    <string name="search_activity">Searching...</string>
    <string name="search_results_format">%1$d Event%2$s Found</string>
    <string name="search_empty_results">No Events Found</string>

    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="fragment_date_filter_message">Select a date range:</string>
    <string name="fragment_date_filter_range_error">End date must be the same or later than start date!</string>

    <string name="events_i_am_hosting">Events I am Hosting</string>
    <string name="share_events_attending_on_profile">Share Events Attending on Profile</string>
    <string name="share_events_hosting_on_profile">Share Events Hosting on Profile</string>
    <string name="search_for_your_home_address">Search for your home address</string>
    
    <string name="fragment_busy_time_message">Select a busy time to edit it:</string>
    <string name="fragment_busy_time_dupe_error">Busy time already exists</string>

    <string name="fragment_date_time_select_message">Select start and end times:</string>
    <string name="fragment_date_time_select_range_error">End time must be later than start time!</string>

    <string name="conflict_warning">The event you want to attend conflicts with %s Are you sure you want to register your interest?</string>
    <string name="conflict_busy_time">a busy time.</string>
    <string name="conflict_event">another event named \"%s.\"</string>
</resources>